feat: add custom exceptions and improve error handling